- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    picocom-ttyS0.desktop -> 1.2
    picocom-ttyS1.desktop -> 1.2

--- a/picocom-ttyS1.desktop
+++ b/picocom-ttyS1.desktop
@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=Picocom ttyS1
 Type=Application
 Comment=Terminal Emulator
@@ -10,6 +9,6 @@ Comment[pt_BR]=Emulador de Terminal
 Comment[sv]=Terminalemulato
 Exec=su - -c 'picocom /dev/ttyS1'
 Terminal=true
-Icon=picocom.png
+Icon=picocom
 Categories=TerminalEmulator;
 # vi: encoding=utf-8
